--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "laravel/ui": "^3.0",
         "livewire/livewire": "^2.4",
         "luecano/numero-a-letras": "^3.0",
+        "maatwebsite/excel": "^3.1",
         "rappasoft/laravel-livewire-tables": "^1.8",
         "rappasoft/lockout": "^3.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
