Fix: regenerate yarn.lock with Yarn 1.22.22

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.7"
+#version: "3.7"
 services:
   app:
     build:
@@ -41,7 +41,7 @@ services:
         - POSTGRES_DB=postgres
     networks:
       - app-network
-      
+
   nginx:
     image: nginx:alpine
     container_name: laravel-nginx
