Improve logging output to follow Rails conventions

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,13 @@ DB_PORT=5432
 DB_DATABASE=sigplan
 DB_USERNAME=sigplan
 DB_PASSWORD=secret
+
+LOG_REQUESTS=true
+LOG_VIEWS=true
+LOG_PARAMETERS=true
+LOG_SQL_QUERIES=false
+
+# Canales de logging opcionales (dejar vacío si no se usan)
+LOG_SLACK_WEBHOOK_URL=
+PAPERTRAIL_URL=
+PAPERTRAIL_PORT=
