--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 node_modules/
 npm-debug.log
 yarn-error.log
+/public/css
 
 # Laravel 4 specific
 bootstrap/compiled.php
@@ -10,6 +11,7 @@ app/storage/
 # Laravel 5 & Lumen specific
 public/storage
 public/hot
+_ide_helper.php
 
 # Laravel 5 & Lumen specific with changed public path
 public_html/storage
