--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
     container_name: laravel-app
     command: bash -c "
              composer install &&
-             php artisan migrate &&
              php artisan serve --host=0.0.0.0 --port=8000"
+             # php artisan migrate &&
     restart: unless-stopped
     working_dir: /var/www/
     volumes:
@@ -31,6 +31,7 @@ services:
       # don't lose the created databases when this container is removed.
       - postgres-data:/var/lib/postgresql/data
       - ./docker-compose/pgsql:/docker-entrypoint-initdb.d/
+      - ./Apuntes:/backups
     #command: chmod +x ./init_db.sh
     ports:
       - "5433:5432"
